<resources>
    <string name="app_name">About_me</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hobbies"> Some hobbies of mine are reading, D and D, gaming and others. I spend a lot of my time doing these things when i have free time. Doing D and D with my friends when they are available, reading when i\'m into a good book and mostly gaming otherwise.
</string>
    <string name="gaming"> Gaming is one of my passions. Board gaming, Video Gaming, etc. Computer gaming is great especially on the Steam because of all the sales and great games they have. Steam is not the only great way to get good games because blizzard has great games and minecraft is also a great game there are just so many of them.
    </string>
    <string name="achevements"> Here are some stuff that i am proud to have done such as. Getting metals in science olympiad, getting my brown belt, being a lifeguard and having a great time too. Besides all of the hospital trips everything is going well.
 </string>
    <string name="family"> I am the oldest of 3 my siblings being my little brother who is in 8th grade and my little sister who is 4 years old. Nathan my little brother is as annoying as can be but he has his moments. My little sister stephanie is really cute but is very stubborn for her age.
 </string>
    <string name="summer"> This summer I went to summer chemistry to get ahead. After words we went to lagoon and had a great time. which was followed up by a job working at the subway in the south jordan walmart.
 </string>
</resources>
