<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".AboutMeApp"
    android:nestedScrollingEnabled="true"
    android:id="@+id/background">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hobbies"
        android:id="@+id/hobbieButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gaming"
        android:id="@+id/gamingButton"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/hobbieButton"
        android:layout_toEndOf="@+id/hobbieButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Achevements"
        android:id="@+id/achevementsButton"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/gamingButton"
        android:layout_toEndOf="@+id/gamingButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Family"
        android:id="@+id/familyButton"
        android:layout_below="@+id/hobbieButton"
        android:layout_toLeftOf="@+id/summerButton"
        android:layout_toStartOf="@+id/summerButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Summer"
        android:id="@+id/summerButton"
        android:layout_below="@+id/gamingButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobbies"
        android:id="@+id/hobbieText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hobbieImage"
        android:background="@drawable/die"
        android:visibility="gone"
        android:layout_above="@+id/hobbieText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gamingText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/gaming"
        android:textSize="16dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gamingImage"
        android:background="@drawable/steam"
        android:layout_above="@+id/gamingText"
        android:layout_alignLeft="@+id/familyButton"
        android:layout_alignStart="@+id/familyButton"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/achevements"
        android:id="@+id/achevementsText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/achevementsImage"
        android:layout_above="@+id/achevementsText"
        android:layout_centerHorizontal="true"
        android:background="@drawable/mission_accomplished"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/family"
        android:id="@+id/familyText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/familyImage"
        android:background="@drawable/family"
        android:layout_above="@+id/familyText"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summer"
        android:id="@+id/summerText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/summerImage"
        android:layout_above="@+id/summerText"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rollercoaster"
        android:visibility="gone" />

</RelativeLayout>
